Fix footer spacing

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ html, body {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 0.1em;
+    height: 2px;
     background-color: #ff470f;
     opacity: 0;
     animation: border ease 1s;
@@ -195,6 +195,9 @@ html, body {
     animation-fill-mode: forwards;
 }
 @media only screen and (max-width: 768px) {
+	.content-footer {
+		margin: 15%;
+	}
 	.content-footer-text {
 		font-size: 11px;
 	}
